tests/ui/issues/issue-42880.stderr
error[E0599]: no associated item named `String` found for struct `String` in the current scope
  --> $DIR/issue-42880.rs:4:22
   |
LL |     let f = |&Value::String(_)| ();
   |                      ^^^^^^ associated item not found in `String`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
